# anton

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  THIRD-PARTY-NOTICES.md
engine/: .gitignore  README.md  pyproject.toml
engine/templates/: README.md  templates.yaml
engine/templates/inputs/: lbo-DemoDeal-Test-scenario1.json  lbo-DemoDeal-example.json
engine/templates/os-templates/: Fee proposal template.xlsx  Project_[x]_Sell_Side_Engagment_Letter_.docx  Project_[x]_[description]_agenda_.docx  Project_x_Buyer_tracker_.xlsx  Project_x_Comps_v2.xlsx  Project_x_LBO_date.xlsx
engine/valuation/: __init__.py  audit.py  cell_refs.py  cli.py  excel_engine.py  exceptions.py  models.py  naming.py  project.py  registry.py  template_ops.py  workspace.py
routines/: .gitignore  CLAUDE.md  Makefile  README.md  pyproject.toml
routines/crews_src/: debate_crew.py  debate_support.py  digest_crew.py  explore_crew.py  explore_lib.py  hello_world_crew.py  triage_crew.py
routines/crews_src/_shared/: __init__.py  boundary.py  bridge_llm.py  human_provider.py  ollama_config.py  triage_lib.py  vault_scan.py
routines/crews_src/_shared/digest/: __init__.py  analyzer.py  classifier.py  extract.py  models.py  review.py  scanner.py  synthesize.py
routines/crews_src/config/: config2.yaml
routines/routines/: __init__.py
routines/routines/api/: README.md  __init__.py  app.py  deps.py  job_registry.py  rate_limit.py
routines/routines/api/middleware/: __init__.py  run_id.py  security.py  session_lock.py
routines/routines/api/routes/: _compose_types.py  actions_decay.py  activity.py  attachments.py  audit.py  bd_decay.py  budgets.py  compose.py  comps.py  credentials.py  crew.py  crew_providers.py  daily.py  daily_digest.py  dashboard.py  drafts.py  (+34 more)
routines/routines/attachments/: __init__.py  extract.py
routines/routines/bd/: __init__.py  cli.py  decay.py
routines/routines/budgets/: __init__.py  gate.py  incidents.py  policy.py  seed.py  storage.py
routines/routines/composite/: __init__.py  audit_mirror.py  lint.py
routines/routines/credentials/: __init__.py  dpapi_key.py  env_bridge.py  lock_manager.py  refresh.py  state_acl.py  store.py
routines/routines/crew/: __init__.py  artefacts.py  audit_mirror.py  overrides.py  pid_store.py  proxy.py  registry.py  run_context.py  types.py
routines/routines/daily_digest/: __init__.py  cli.py  pull.py  reader.py  schema.py  synthesise.py  writer.py
routines/routines/dashboard/: __init__.py  app.py  overview.py  stale.py
routines/routines/dealtracker/: __init__.py  capture.py  cli.py  extract.py  schema.py  snapshot.py  workbook.py
routines/routines/digest/: __init__.py  cli.py  emit.py
routines/routines/dismissals/: __init__.py  storage.py
routines/routines/earnings/: __init__.py  calendar.py  capture.py  cli.py  compare.py  extract.py  fetch.py  materiality.py  pipeline.py  pull.py  render.py  report.py  schema.py  vault.py  watchlist.py  workbook.py
routines/routines/guards/: __init__.py
routines/routines/hinotes/: __init__.py  crossrefs.py  decisions.py  extract.py  issue_candidates.py  mover.py  processor.py  watcher.py
routines/routines/hooks/: __init__.py  central_guards.py  decorators.py  event_bus.py  events.py  tool_dispatch.py  types.py
routines/routines/intake/: __init__.py  cli.py  dispatch.py  parse.py  pdf_render.py  schema.py  watcher.py  writer.py
routines/routines/learning/: __init__.py  cli.py  cluster.py  detect.py  propose.py  schema.py
routines/routines/lessons/: __init__.py  cli.py  pull.py  schema.py  suggest.py  synthesise.py  writer.py
routines/routines/markets/: README.md  __init__.py  adapter.py  cache.py  comps.py  equity_research.py  macro.py  openbb_provider.py  stub_provider.py  types.py
routines/routines/mnpi_attestations/: __init__.py  gate.py  policy.py  storage.py
routines/routines/morning_brief/: __init__.py  cli.py  pull.py  reader.py  schema.py  synthesise.py  writer.py
routines/routines/operatorconfig/: __init__.py  blocks.py  models.py  profile_edit.py  store.py
routines/routines/project_chat/: __init__.py  cli.py  pull.py  reader.py  schema.py  synthesise.py  writer.py
routines/routines/projects/: __init__.py  actions.py  cli.py  decay.py  issues.py
routines/routines/promotion/: __init__.py  cli.py  propose.py  scan.py
routines/routines/recall/: CONTRADICTION-NOTES.md  __init__.py  cli.py  index.py  rerank.py  retrieve.py  synthesise.py
routines/routines/scheduler/: README.md  __init__.py  jobs.py  scheduler.py  suspension.py
routines/routines/sectornews/: __init__.py  cli.py  coverage.py  dedupe.py  firecrawl_client.py  pipeline.py  score.py  search_provider.py  sources.py  synthesise.py  tavily_client.py
routines/routines/sectors/: __init__.py  cli.py  schema.py  synthesize.py  views.py  writer.py
routines/routines/sensitivity_overrides/: __init__.py  policy.py  storage.py
routines/routines/shared/: __init__.py  audit.py  audit_db.py  claude_api_client.py  claude_subprocess_client.py  codex_subprocess_client.py  docx_tracked_changes.py  filename.py  llm_errors.py  llm_temperature.py  md_config.py  minimax_client.py  ollama_client.py  pptx_to_markdown.py  profile.py  read_policy.py  retention.py  retention_cli.py  routing.py  subprocess_env.py  ticker_config.py  vault_writer.py  write_policy.py
routines/routines/skills/: __init__.py  registry.py
routines/routines/stale_gate/: __init__.py  cli.py  sweep.py
routines/routines/vault_graph/: __init__.py  cli.py  graph.py  parser.py  queries.py
routines/routines/vault_health/: __init__.py  cli.py  constitution.py  freshness.py  links.py  recall_index.py  speculation.py
routines/routines/week_in_review/: __init__.py  cli.py  collect.py  render.py
routines/scripts/: README.md  hinotes-watcher.service  run_dashboard.sh  run_hinotes_watcher.sh
(+192 files in other folders)
